syntax = "proto3";

service CredentialsService {

  rpc CreateUserCredentials(CreateCredentialsRequest) returns (CreateCredentialsResponse);

}

message CreateCredentialsRequest {
  repeated KeyHashPair keyHashPair  = 1;
}

message CreateCredentialsResponse {
  oneof result {
    Success success = 1;
    Failure failure = 2;
  }
}

message KeyHashPair {
  string key = 1;
  string hardwareHash = 2;
}

message Success {
  string message = 1;
}

message Failure {
  string failure = 1;
}
